syntax = "proto3";

package v1alpha1;

message VolumeSnapCreateRequest {
	int32 version = 1;
	string volume = 2;
	string snapname = 3;
}

message VolumeSnapCreateResponse {
	int32 version = 1;
	bytes status = 2;
}

message VolumeSnapDeleteRequest {
	int32 version = 1;
	string volume = 2;
	string snapname = 3;
}

message VolumeSnapDeleteResponse {
	int32 version = 1;
	bytes status = 2;
}

message VolumeResizeRequest {
	string volume = 1;
	string size = 2;
}

message VolumeResizeResponse {
	bytes status = 1;
}

service RunCommand {
	rpc RunVolumeSnapCreateCommand(VolumeSnapCreateRequest) returns (VolumeSnapCreateResponse) {};
	rpc RunVolumeSnapDeleteCommand(VolumeSnapDeleteRequest) returns (VolumeSnapDeleteResponse) {};
	rpc RunVolumeResizeCommand(VolumeResizeRequest) returns (VolumeResizeResponse) {};
}
